[package]
name = "osmxq"
version = "4.0.2"
description = "indexed quad format for open street map data"
edition = "2018"
license = "BSD-3-Clause"

[[bin]]
name = "osmxq"
path = "src/bin.rs"

[dependencies]
osmpbf = "0.2.4"
argmap = "1.1.1"
desert = "2.0.0"
lru = "0.6.5"
futures = "0.3.13"
ahash = "0.7.4"
rayon = "1.5.1"
crossbeam-channel = "0.5.1"
memmap = "0.7.0"
